syntax="proto2";

package pgUser;

import "vendor/github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

//实名验证
message RealNameAuthRequest
{
    optional int64 mid = 1[(gogoproto.nullable) = false];
    optional string idcard = 2[(gogoproto.nullable) = false]; //身份证
    optional string real_name = 3[(gogoproto.nullable) = false]; //真实姓名
}

message RealNameAuthRespData
{
    optional int32 login_type = 1[(gogoproto.nullable) = false]; //登录类型
    optional string pwd = 2[(gogoproto.nullable) = false]; //密码
}

message RealNameAuthResponse
{
    optional int32 status = 1[(gogoproto.nullable) = false]; //状态 0 成功 >=1失败
    optional RealNameAuthRespData data = 2[(gogoproto.nullable) = false];
}